fix: Dropdown text-wrap

--- a/packages/@dcl/inspector/src/components/ui/Dropdown/Option/Option.css
+++ b/packages/@dcl/inspector/src/components/ui/Dropdown/Option/Option.css
@@ -24,6 +24,7 @@
   font-size: 12px;
   font-style: normal;
   font-weight: 700;
+  text-wrap: nowrap;
 }
 
 .OptionContainer:not(.DropdownSelection):hover {
